force-app/main/default/objects/Contract/fields/Adjusted_RenewalOpp_EndDate__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_RenewalOpp_EndDate__c</fullName>
    <label>Adjusted RenewalOpp EndDate</label>
    <type>Date</type>
</CustomField>