force-app/main/default/objects/Contract/fields/Billing_Contract_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contract_Line_Id__c</fullName>
    <label>Billing Contract Line Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>