force-app/main/default/objects/Contract/fields/Consolidated_Master_Contract__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Master_Contract__c</fullName>
    <label>Consolidated Master Contract</label>
    <length>18</length>
    <type>Text</type>
</CustomField>