force-app/main/default/objects/Contract/fields/Consumed_Renewal_ACV__c.field-meta.xml
<CustomField>
    <fullName>Consumed_Renewal_ACV__c</fullName>
    <inlineHelpText>ACV credited to the Renewal AE to date.</inlineHelpText>
    <label>Consumed Renewal ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>