force-app/main/default/objects/Contract/fields/Contract_C_R_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Contract_C_R_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://samsaradev.atlassian.net/browse/GTMS-25723</description>
    <inlineHelpText>A Cancel and Replace (C&amp;R) process is in progress for this account. In-flight opportunities tied to the contract being canceled/replaced may be restricted from quote approval or submission to Closing. Please complete the C&amp;R process before proceeding with other opportunities.</inlineHelpText>
    <label>Contract C&amp;R In Progress</label>
    <type>Checkbox</type>
</CustomField>