force-app/main/default/objects/Contract/fields/Contract_End_Date_Manual__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date_Manual__c</fullName>
    <description>Calculated in Opportunity Contract Batch when the Contract is created as the most recent License End Date among the related Opportunities</description>
    <inlineHelpText>Calculated in Opportunity Contract Batch when the Contract is created as the most recent License End Date among the related Opportunities</inlineHelpText>
    <label>Contract End Date	(Manual)</label>
    <type>Date</type>
</CustomField>