force-app/main/default/objects/Contract/fields/Contract_Id_Same_as_Renewal_Opp_Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract_Id_Same_as_Renewal_Opp_Contract__c</fullName>
    <formula>IF(Id  =  SBQQ__RenewalOpportunity__r.SBQQ__RenewedContract__c,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Id Same as Renewal Opp Contract</label>
    <type>Checkbox</type>
</CustomField>