force-app/main/default/objects/Contract/fields/Contract_Renewable_ACV__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewable_ACV__c</fullName>
    <inlineHelpText>Sum of all expiring license ACV. Does not include HW or select products like…</inlineHelpText>
    <label>Contract Renewable ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>