force-app/main/default/objects/Contract/fields/Contract_Renewable_ACV_USD__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewable_ACV_USD__c</fullName>
    <description>This is the USD conversion of Contract_Renewable_ACV__c field</description>
    <formula>Contract_Renewable_ACV__c / CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Renewable ACV USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>