force-app/main/default/objects/Contract/fields/Contract_Renewal_ACV__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_ACV__c</fullName>
    <label>Contract Renewal ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>