force-app/main/default/objects/Contract/fields/Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of GTMS-6040</description>
    <label>Deactivated</label>
    <type>Checkbox</type>
</CustomField>