force-app/main/default/objects/Contract/fields/Finance_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Finance_Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>added for GTMS-16222</description>
    <label>Finance Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Is_Finance_Partner_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Finance Partner)</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>