force-app/main/default/objects/Contract/fields/Flex_Is_Rebook__c.field-meta.xml
<CustomField>
    <fullName>Flex_Is_Rebook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Rebook</label>
    <type>Checkbox</type>
</CustomField>