force-app/main/default/objects/Contract/fields/Flex_Replacement_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Flex_Replacement_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GTMS-26418: The upgraded opportunity created out of this contract from C&amp;R process</description>
    <inlineHelpText>The upgraded opportunity created out of this contract from C&amp;R process</inlineHelpText>
    <label>Replacement Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts (Replacement Opportunity)</relationshipLabel>
    <relationshipName>ReplacementContracts</relationshipName>
    <type>Lookup</type>
</CustomField>