force-app/main/default/objects/Contract/fields/HWM_Threshold__c.field-meta.xml
<CustomField>
    <fullName>HWM_Threshold__c</fullName>
    <inlineHelpText>Percentage of HWM value at which RAE credit on renewal opportunity is capped.</inlineHelpText>
    <label>HWM Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>