force-app/main/default/objects/Contract/fields/HWM_Value__c.field-meta.xml
<CustomField>
    <fullName>HWM_Value__c</fullName>
    <inlineHelpText>High-water mark, or amount used to determine AE credit/penalty on renewal opportunity.</inlineHelpText>
    <label>HWM Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>