force-app/main/default/objects/Contract/fields/Netsuite_Delinquent_Status__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Delinquent_Status__c</fullName>
    <formula>TEXT(Account.Netsuite_Delinquent_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Netsuite Delinquent Status</label>
    <type>Text</type>
</CustomField>