force-app/main/default/objects/Contract/fields/Original_Contracted_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Original_Contracted_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Contracted Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Original_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>