force-app/main/default/objects/Contract/fields/Original_Reseller_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Reseller_ID__c</fullName>
    <formula>Original_Contracted_Opportunity__r.Reseller_Partner__r.X18_Digit_Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Reseller ID</label>
    <type>Text</type>
</CustomField>