force-app/main/default/objects/Contract/fields/P_P_Renewals__c.field-meta.xml
<CustomField>
    <fullName>P_P_Renewals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P&amp;P Renewals</label>
    <type>Checkbox</type>
</CustomField>