force-app/main/default/objects/Contract/fields/Renewal_Data_Clean__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Data_Clean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Data Clean</label>
    <type>Checkbox</type>
</CustomField>