force-app/main/default/objects/Contract/fields/Renewed_To_Oppty_Stage__c.field-meta.xml
<CustomField>
    <fullName>Renewed_To_Oppty_Stage__c</fullName>
    <formula>TEXT(SBQQ__RenewalOpportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewed To Oppty Stage</label>
    <type>Text</type>
</CustomField>