force-app/main/default/objects/Contract/fields/Rolling_off_HWM__c.field-meta.xml
<CustomField>
    <fullName>Rolling_off_HWM__c</fullName>
    <inlineHelpText>Sum of HWM Value of Renewed Contract and contracts consolidated to the Renewed Contract.</inlineHelpText>
    <label>Rolling off HWM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>