force-app/main/default/objects/Contract/fields/Sales_Ops_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ops_Notes__c</fullName>
    <label>Sales Ops Notes</label>
    <type>TextArea</type>
</CustomField>