force-app/main/default/objects/Contract/fields/Selected_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Selected_Payment_Type__c</fullName>
    <label>Selected Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Annual</fullName>
            </value>
            <value>
                <fullName>Direct Monthly</fullName>
            </value>
            <value>
                <fullName>Upfront Payments</fullName>
            </value>
            <value>
                <fullName>Direct Quarterly</fullName>
            </value>
            <value>
                <fullName>Direct Semi-Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>