force-app/main/default/objects/Contract/fields/Skip_Silent_Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Skip_Silent_Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-15704</description>
    <label>Skip Co-Term Renewal</label>
    <type>Checkbox</type>
</CustomField>