force-app/main/default/objects/Contract/fields/Suspension_Date__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Date__c</fullName>
    <description>Suspension date should be able to be manually populated in a date format (mm/day/year) by a user.//GTMS-23000</description>
    <label>Suspension Date</label>
    <type>Date</type>
</CustomField>