force-app/main/default/objects/Contract/fields/Webstore_Renewal_Quote_Step__c.field-meta.xml
<CustomField>
    <fullName>Webstore_Renewal_Quote_Step__c</fullName>
    <label>Webstore Renewal Quote Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>