force-app/main/default/objects/Contract/fields/Weighted_Average_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Average_Start_Date__c</fullName>
    <description>This Date is created for the WASD Project GTMS-23000 that is updated manually by AE&apos;s or the finance team for contract consolidation purpose</description>
    <inlineHelpText>Renewal Date may be a weighted average if multiple contracts are expiring in quarter</inlineHelpText>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>