force-app/main/default/objects/Contract/recordTypes/Free_Trial.recordType-meta.xml
<RecordType>
    <fullName>Free_Trial</fullName>
    <active>true</active>
    <label>Free Trial</label>
</RecordType>