force-app/main/default/objects/Contract/recordTypes/Renewed_Contract_Closed.recordType-meta.xml
<RecordType>
    <fullName>Renewed_Contract_Closed</fullName>
    <active>true</active>
    <label>Renewed Contract Closed</label>
</RecordType>