force-app/main/default/objects/Contract/recordTypes/Standard_Contract.recordType-meta.xml
<RecordType>
    <fullName>Standard_Contract</fullName>
    <active>true</active>
    <label>Standard Contract</label>
</RecordType>