force-app/main/default/objects/Contract/validationRules/Free_Trial_Quotes_or_Renewed_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Free_Trial_Quotes_or_Renewed_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordTypeName__c == &apos;Free Trial&apos;,
OR ( SBQQ__RenewalForecast__c == true,  SBQQ__RenewalQuoted__c == true)
)</errorConditionFormula>
    <errorMessage>Contracts related to Free-trial Opportunities cannot be renewed. Please create a new Opportunity</errorMessage>
</ValidationRule>