force-app/main/default/objects/Contract/listViews/AllActivatedContracts.listView-meta.xml
<ListView>
    <fullName>AllActivatedContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.END_DATE</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CONTRACT.END_DATE</field>
        <operation>greaterThan</operation>
        <value>6/16/2022</value>
    </filters>
    <filters>
        <field>CONTRACT.SHIPPING_COUNTRY_CODE</field>
        <operation>equals</operation>
        <value>CA</value>
    </filters>
    <label>All Activated Contracts</label>
</ListView>